--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,4 @@
-[[headers]]
-  for = "/*.js"
-  [headers.values]
-    Content-Type = "application/javascript"
-    
-[[headers]]
-  for = "/*.mjs"
-  [headers.values]
-    Content-Type = "application/javascript"
+[build]
+  base = "main"
+  command = "npm run build"
+  publish = "dist"
